2004-10-19 Andrew J. Schorr <aschorr@telemetry-investments.com>

	* bgp_nexthop.c: (bgp_connected_add) Connected destination pointer
	  may be NULL.
	  (bgp_connected_delete) ditto.

2004-10-14 Hasso Tepper <hasso at quagga.net>

	* bgp_dump.c: Make dump configuration appear in vtysh.

2004-10-13 Hasso Tepper <hasso at quagga.net>

	* bgp_snmp.c: Remove defaults used to initialize smux connection to
	  snmpd. Connection is initialized only if smux peer is configured.
	* bgp_view.c: It's dead file. Reomved.

2004-10-13 Paul Jakma <paul@dishone.st>

	* (global) more const'ification and fixups of types to clean up code.
	* bgp_mplsvpn.{c,h}: (str2tag) fix abuse. Still not perfect,
          should use something like the VTY_GET_INTEGER macro, but without
          the vty_out bits..
        * bgp_routemap.c: (set_aggregator_as) use VTY_GET_INTEGER_RANGE
          (no_set_aggregator_as) ditto.
        * bgpd.c: (peer_uptime) fix unlikely bug, where no buffer is 
          returned, add comments about troublesome return value.
	
2004-10-03 James R. Leu <jleu at mindspring.com>

	* bgp_vty.c: Router id from zebra can be manually overriden.
	* bgp_zebra.c: Read router id related messages from zebra daemon.
	  Remove own code related with router id selection.
	* bgpd.c, bgpd.h: Remove own router id selection code. Use the one
	  from zebra daemon if it isn't manually overriden.

2004-09-26 Hasso Tepper <hasso at quagga.net>

	* bgp_aspath.c, bgp_packet.c, bgp_vty.c: Fix compiler warnings.

2004-09-23 Hasso Tepper <hasso at quagga.net>

	* *.[c|h]: list -> struct list *, listnode -> struct listnode *.

2004-07-09 Paul Jakma <paul@dishone.st>

	* Merge of GNU Zebra cvs2svn changesets r799, r800 and r807.
	* bgp_dump.c: (bgp_dump_attr) cleanup. return status code. check
	  attributes present before printing.
	* bgp_dump.c: update bgp_dump_attr prototype.
	* bgp_packet.c: (bgp_update_receive) init attrstr. check status
	  of bgp_dump_attr. Log end-of-rib UPDATEs.
